apps/fitness/middlewares.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: fitness-headers
  namespace: fitness
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
