apps/fitness/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fitness
  labels:
    pod-security.kubernetes.io/enforce: baseline
