apps/fitness/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wger
  namespace: fitness
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wger
  template:
    metadata:
      labels:
        app: wger
    spec:
      securityContext:
        fsGroup: 999
      containers:
        - name: wger-app
          image: wger/server:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: media
              mountPath: /home/wger/media

        - name: db
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data

      volumes:
        - name: db-data
          persistentVolumeClaim: { claimName: fitness-db-pvc }
        - name: media
          persistentVolumeClaim: { claimName: fitness-media-pvc }
