apps/fitness/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wger
  namespace: fitness
spec:
  selector:
    app: wger
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
